trying to fix the images on carousel and it doesn't work. jumped back and forth with phone size in stead to make the carousel show its content instead.

--- a/styles.css
+++ b/styles.css
@@ -90,13 +90,13 @@ footer {
 }
 
 .carousel {
-    width: 80%;
-    max-width: 1200px;
+    width: clamp(3rem, 70%, 1000px);
     overflow: hidden;
-    height: 800px;
+    height: 75vh;
     margin: 2rem auto;
     position: relative;
-    border-radius: 8px;}
+    padding: 0;
+}
 
 .carousel > ul {
     margin: 0;
@@ -147,8 +147,8 @@ footer {
 
 .slide > img {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: auto;
     object-fit: cover;
     object-position: center;
 }
@@ -188,6 +188,10 @@ footer {
 .slider-nav a:hover, .slider-nav a:active {
     background-color: rgba(var(--color-copper));
     opacity: 1;
+}
+
+.slide-content {
+    margin-top: 10px;
 }
 
 .productSlide1, .productSlide2, .productSlide3 {
@@ -253,7 +257,7 @@ footer {
     display: block;
     margin: 0 auto;
     border-radius: 8px;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .product-details {
@@ -353,4 +357,32 @@ button:hover {
 
 .cart-qty {
     width:70px;
+}
+
+@media (max-width: 600px) {
+    .product-details {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .product-image {
+        max-width: 100%;
+    }
+    
+    .product-info {
+        width: 100%;
+        text-align: center;
+    }
+
+    .carousel {
+        height: 700px;
+    }
+
+    .slide > img {
+        width: 100%;
+        height: 250px;
+        /* position: relative; */
+        object-position: 80% center;
+        object-fit: contain;
+    }
 }
